--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <title>Formulario Basico</title>
 </head>
 <body>
-    <p>Por favor llena este fomulario para ponerte en contacto con nosotros</p>
+    <p>Muchas gracias! sus datos han sido enviados.</p>
     <fieldset>
         <legend>Datos de contacto</legend>
             <form action="contacto.html">
